--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Audiowide|Khand|Source+Sans+Pro:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Khand:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/home.css">
+    <title>Alita | Battle Angel</title>
   </head>
   <body>
     <main>
       <div class="hero">
         <div id="menu-toggle">
-          <input type="checkbox"></input>
+          <input type="checkbox">
           <span></span>
           <span></span>
           <span></span>
@@ -28,30 +31,33 @@
           <h1>ALITA</h1>
           <h2>BATTLE ANGEL</h2>
           <p>IN THEATERS FEBRUARY 14</p>
-          <button class="button"">GET TICKETS</button>
+          <button class="button">GET TICKETS</button>
         </div>
-        <div class="video">
-          <iframe src="https://www.youtube.com/embed/puKWa8hrvA8?autoplay=1&controls=0&showinfo=0&loop=1​" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <button class="button"">VIEW MORE CLIPS</button>
-        </div>
+      </div>
+      <div class="video">
+        <h1>VIEW TRAILER</h1>
+        <iframe src="https://www.youtube.com/embed/puKWa8hrvA8?autoplay=0&controls=0&showinfo=0&loop=1​" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <button class="button">VIEW MORE CLIPS</button>
       </div>
       <div class="synopsis">
         <h1>SYNPOSIS</h1>
-        <div class="credits">
-          <h2>DIRECTED BY</h2>
-          <p>Robert Rodriguez</p>
-          <h2>SCREENPLAY BY</h2>
-          <p>James Cameron & Laeta Kalogridis</p>
-          <h2>PRODUCED BY</h2>
-          <p>James Cameron & Jon Landau</p>
-          <h2>BASED ON THE GRAPHIC NOVEL</h2>
-          <p>"Gunnm" by Yukito Kishiro</p>
-        </div>
-        <div class="synopsis-text">
-          <p>From visionary filmmakers James Cameron (AVATAR) and Robert Rodriguez (SIN CITY), comes ALITA: BATTLE ANGEL, an epic adventure of hope and empowerment.</p>
-          <p>When Alita (Rosa Salazar) awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido (Christoph Waltz), a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past. </p>
-          <p>As Alita learns to navigate her new life and the treacherous streets of Iron City, Ido tries to shield her from her mysterious history while her street-smart new friend Hugo (Keean Johnson) offers instead to help trigger her memories. But it is only when the deadly and corrupt forces that run the city come after Alita that she discovers a clue to her past – she has unique fighting abilities that those in power will stop at nothing to control.</p>
-          <p>If she can stay out of their grasp, she could be the key to saving her friends, her family and the world she’s grown to love.</p>
+        <div class="blurbs">
+          <div class="credits">
+            <h2>DIRECTED BY</h2>
+            <p>Robert Rodriguez</p>
+            <h2>SCREENPLAY BY</h2>
+            <p>James Cameron & Laeta Kalogridis</p>
+            <h2>PRODUCED BY</h2>
+            <p>James Cameron & Jon Landau</p>
+            <h2>BASED ON THE GRAPHIC NOVEL</h2>
+            <p>"Gunnm" by Yukito Kishiro</p>
+          </div>
+          <div class="synopsis-text">
+            <p>From visionary filmmakers James Cameron (AVATAR) and Robert Rodriguez (SIN CITY), comes ALITA: BATTLE ANGEL, an epic adventure of hope and empowerment.</p>
+            <p>When Alita (Rosa Salazar) awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido (Christoph Waltz), a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past. </p>
+            <p>As Alita learns to navigate her new life and the treacherous streets of Iron City, Ido tries to shield her from her mysterious history while her street-smart new friend Hugo (Keean Johnson) offers instead to help trigger her memories. But it is only when the deadly and corrupt forces that run the city come after Alita that she discovers a clue to her past – she has unique fighting abilities that those in power will stop at nothing to control.</p>
+            <p>If she can stay out of their grasp, she could be the key to saving her friends, her family and the world she’s grown to love.</p>
+          </div>
         </div>
       </div>
       <div class="posters">
@@ -61,6 +67,8 @@
           <img src="images/poster-2.jpg" alt="poster 2">
           <img src="images/poster-3.jpg" alt="poster 3">
           <img src="images/poster-4.jpg" alt="poster 4">
+          <img src="images/poster-5.jpg" alt="poster 5">
+          <img src="images/poster-6.jpg" alt="poster 6">
         </div>
       </div>
     </main>
