--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Khand:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="css/home.css">
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <title>Alita | Battle Angel</title>
   </head>
   <body>
@@ -24,6 +26,7 @@
             <li>SYNOPSIS</li>
             <li>TRAILER</li>
             <li>GALLERY</li>
+            <li>SHARE</li>
           </ul>
         </div>
         <div class="promo">
@@ -69,6 +72,13 @@
           <img src="images/poster-4.jpg" alt="poster 4">
           <img src="images/poster-5.jpg" alt="poster 5">
           <img src="images/poster-6.jpg" alt="poster 6">
+        </div>
+      </div>
+      <div class="social">
+        <h1>JOIN THE CONVERSATION</h1>
+        <div class="social-embeds">
+          <a class="twitter-timeline" data-width="400" data-height="800" data-theme="dark" href="https://twitter.com/AlitaMovie?ref_src=twsrc%5Etfw">Tweets by AlitaMovie</a>
+          <iframe class="fb" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FAlitaMovie%2F&tabs=timeline&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId" style="border:none;overflow:hidden" scrolling="no" allowTransparency="true" allow="encrypted-media"></iframe>
         </div>
       </div>
     </main>
